--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,8 +44,8 @@ jobs:
       - run:
           name: run tests
           command: |
-            bundle exec rspec
-                            
+            bundle exec cucumber
+
       # collect reports
       - store_test_results:
           path: /tmp/test-results
